...
  "password": "Password",
  "signUp": "Sign Up",
  "login": "Login",
  "alreadyHaveAccount": "Already have an account? Login",
  "newToAbadgar": "New to Abadgar? Sign Up",
  "skipAuth": "Skip for now (Local Only)",
  "fieldOverview": "Field Overview",
  "noActiveSeason": "No Active Season",
  "offlineAlert": "Offline Mode. Sign in for backup.",
  "signIn": "SIGN IN",
  "alertHidden": "Alert hidden for this session.",
  "seasonStarted": "Started",
  "seasonFinished": "Finished:",
  "switchedFocus": "Switched focus to {seasonName}",
...
